--- a/theme.toml
+++ b/theme.toml
@@ -1,18 +1,19 @@
-name = "hugo-theme-console"
+name = "hugo-parked-domain"
 license = "MIT"
-licenselink = "https://github.com/mrmierzejewski/hugo-theme-console/blob/master/LICENSE"
-description = "A minimal, responsive and light theme for Hugo inspired by Linux console."
-homepage = "https://github.com/mrmierzejewski/hugo-theme-console"
+licenselink = "https://github.com/majime-dev/hugo-parked-domain/blob/master/LICENSE"
+description = "A minimal, responsive and light theme for Hugo used for domains parked under the Majime organisation."
+homepage = "https://github.com/majime-dev/hugo-parked-domain"
 tags = ["blog", "gallery", "portfolio", "console", "terminal", "clean", "personal", "minimal", "monotone", "simple", "technical", "responsive", "mobile", "minimalist", "retro", "animation"]
 features = ["disqus", "responsive", "google analytics"]
 min_version = "0.81.0"
 
 [author]
+    name = "majime.dev"
+    homepage = "https://majime.dev"
+    github = "https://github.com/majime-dev"
+
+[original]
     name = "Marcin Mierzejewski"
     homepage = "https://mrmierzejewski.com"
     github = "https://github.com/mrmierzejewski"
 
-[original]
-    author = "Jonas D."
-    homepage = "https://terminalcss.xyz/"
-    repo = "https://github.com/Gioni06/terminal.css"
